# ELECTRONIC_VOTING_SYSTEM_PRE

./: .gitignore  GOOGLE_OAUTH_SETUP.md  all_774_polling_units.json  convert.js  generate.js  generate_realistic.js  realistic_774_polling_units.json
active/: .env.example  .gitignore  Dockerfile  app.py  requirements.txt
evoting-fixed/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pom.xml
evoting-frontend/: .env.example  ENV_SETUP.md  POLLING_UNITS_API.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
evoting-frontend/src/: App.jsx  index.css  main.jsx
evoting-frontend/src/api/: adminUsers.js  audit.js  auth.js  client(1).js  client.js  (+12 more)
firmware/: MFAVotingApplet.java  esp32_cam_v2__1_.ino  esp32_s3_merged_5.ino
liveness-service/: .gitignore  Dockerfile  cdcn_export.py  config.py  docker-compose.yml  download_models.py  face_detector.py  liveness_evaluator.py  main.py  optical_flow.py  render.yaml  requirements.txt  test.py
main/: CMakeLists.txt  applet_crypto.cpp  applet_crypto.h  applet_defs.h  buzzer.cpp  buzzer.h  camera_uart.cpp  camera_uart.h  config.h  crypto_utils.cpp  crypto_utils.h  enrollment.cpp  enrollment.h  enrollment_store.cpp  enrollment_store.h  fingerprint.cpp  fingerprint.h  font.h  idf_component.yml  ili9341.cpp  ili9341.h  iso14443.c  iso14443.h  main.cpp  network.cpp  network.h  officer_auth.cpp  officer_auth.h  pin_defs.h  pn5180.cpp  pn5180.h  pn5180.txt  session.h  smart_card.cpp  smart_card.h  terminal_key.cpp  terminal_key.h  tft_ui.cpp  tft_ui.h
(+213 files in other folders)
